# Visual-Insights

./: .gitignore  README.md  pyproject.toml  test.py  test_nan_scatter.py
src/visual_insights/: __init__.py  bar_chart.py  box_plot.py  error.py  metrics.py  offset_map.py  scatter.py  shap.py  sobol.py  spatial.py  statistical.py  typing.py
src/visual_insights/common/: to_numpy.py  typing.py
src/visual_insights/plot_box_chart/: __init__.py  _core.py  plot_binned_box_chart.py  plot_box_chart.py  plot_groupby_box_chart.py
src/visual_insights/utils/: cache.py  data_handlers.py  visualization.py
