[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
description = "通用可视化和可解释性工具"
dynamic = ["version"]
name = "visual_insights"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "matplotlib",
  "numpy>=2.0.0",
  "pandas>=2.0.0",
  "shap>=0.47.0",
  "scikit_learn>=1.0.0",
  "xgboost>=2.0.0",
  "seaborn",
]

[project.optional-dependencies]
dev = ["hatch", "ruff"]
opt = ["SALib"]


[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "N", "C90"]
target-version = "py310"

[tool.pyright]
typeCheckingMode = "basic"
